--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* by Prabhat Kumar
+/* by Prabhat Kumar [prabhat.senior@gmail.com]
  ++++++++++++++++++++
  * Copyright © 2013. All rights reserved.
  * http://kumarlab.org/
